MMCPA-1254: Fix alignement terms and conditions.

--- a/docroot/themes/custom/alshaya_white_label/sass/components/cart/_checkout-payment.scss
+++ b/docroot/themes/custom/alshaya_white_label/sass/components/cart/_checkout-payment.scss
@@ -117,9 +117,7 @@
 
   .form-type-checkbox {
     .option {
-      @include breakpoint($desktop) {
-        top: 0;
-      }
+      top: 0;
 
       &::before {
         margin-#{$right}: 0.9rem;
@@ -130,7 +128,8 @@
 
     p {
       @include breakpoint($upto-desktop) {
-        margin-#{$left}: 2rem;
+        margin-#{$left}: 0;
+        width: 80%;
       }
     }
   }
